# DmitriySelutin-project.cours-3

./: .env_template  README.md  pyproject.toml
src/: logger.py  main.py  services.py  views.py
tests/: test_services.py
