[tool.poetry]
name = "dmitriyselutin-project-cours-3"
version = "0.1.0"
description = ""
authors = ["Dmitriy <pblpra8@gmail.com>"]
readme = "README.md"
packages = [{include = "dmitriyselutin_project"}]

[tool.poetry.dependencies]
python = "^3.11"
pytest-cov = "^5.0.0"
pandas = "^2.2.2"


[tool.poetry.group.lint.dependencies]
black = "^24.4.2"
isort = "^5.13.2"
flake8 = "^7.1.0"
mypy = "^1.10.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "hug"
src_paths = ["isort", "test"]
line_length = 119

[tool.mypy]
disallow_untyped_defs = true
warn_return_any = true

[tool.black]
#Максимальная длина строки
line-length = 119
#Файлы, которые не нужно форматировать
exclude = '''
(
  /(
      .eggs         # Исключить несколько общих каталогов
    | .git          # в корне проекта
    | .hg
    | .mypy_cache
    | .tox
    | .venv
    | dist
  )/
)
'''
